--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -989,6 +989,9 @@ section,
   transform: translateX(5px);
 }
 
+.about .animated {
+  animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
 /*--------------------------------------------------------------
 # Values Section
 --------------------------------------------------------------*/
@@ -997,7 +1000,7 @@ section,
   color: var(--default-color);
   padding: 30px;
   box-shadow: 0px 0 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
+  
   transition: 0.3s;
   height: 100%;
   border: 0;
@@ -1010,6 +1013,7 @@ section,
 }
 
 .values .card h3 {
+  text-align: center;
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 18px;
