--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1016,7 +1016,11 @@ section,
   text-align: center;
   font-size: 24px;
   font-weight: 700;
-  margin-bottom: 18px;
+}
+.values .card ul {
+  text-align: left;
+  font-size: 15px;
+  font-weight: 500;
 }
 
 .values .card:hover {
@@ -1026,6 +1030,7 @@ section,
 .values .card:hover img {
   transform: scale(1);
 }
+
 
 /*--------------------------------------------------------------
 # Stats Section
